<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="@color/mybackground"    
    android:title="@string/preferences_title">

    <PreferenceCategory 
        android:title="@string/sound_title"
        android:key="sound_settings">
	    <CheckBoxPreference
	        android:key="welcome_preference"
	        android:title="@string/welcome_title"
	        android:defaultValue="true" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/gameplay_title"
        android:key="gameplay_settings">    
		<ListPreference
		    android:key="difficulty_preference"
		    android:title="@string/difficulty_title"
		    android:defaultValue="Normal"
			android:entries="@array/difficultyEntries"		    
		    android:entryValues="@array/difficultyValues" 
		    />
    </PreferenceCategory>            
</PreferenceScreen>
